@@ -72,6 +72,7 @@ class VideoDialog : public Dialog
     PopUpWidget*      myFullscreenPopup;
     CheckboxWidget*   myColorLossCheckbox;
     CheckboxWidget*   myGLStretchCheckbox;
+    CheckboxWidget*   myUseVBOCheckbox;
     CheckboxWidget*   myUseVSyncCheckbox;
     CheckboxWidget*   myUIMessagesCheckbox;
     CheckboxWidget*   myCenterCheckbox;
